tests/baselines/reference/parser.numericSeparators.binaryNegative.errors.txt
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts(1,3): error TS1177: Binary digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts(1,3): error TS2304: Cannot find name '_110'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,2): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,3): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts(1,3): error TS2304: Cannot find name 'B0101'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,5): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,6): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts(1,6): error TS2304: Cannot find name '_11'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,12): error TS6188: Numeric separators are not allowed here.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,13): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts(1,13): error TS2304: Cannot find name '_'.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts(1,3): error TS1177: Binary digit expected.
tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts(1,3): error TS2304: Cannot find name '___0111010_0101_1'.


==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/1.ts (1 errors) ====
    0b00_
        ~
!!! error TS6188: Numeric separators are not allowed here.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/2.ts (2 errors) ====
    0b_110
      
!!! error TS1177: Binary digit expected.
      ~~~~
!!! error TS2304: Cannot find name '_110'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/3.ts (3 errors) ====
    0_B0101
     ~
!!! error TS6188: Numeric separators are not allowed here.
      ~~~~~
!!! error TS1005: ';' expected.
      ~~~~~
!!! error TS2304: Cannot find name 'B0101'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/4.ts (3 errors) ====
    0b01__11
        ~
!!! error TS6188: Numeric separators are not allowed here.
         ~~~
!!! error TS1005: ';' expected.
         ~~~
!!! error TS2304: Cannot find name '_11'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/5.ts (3 errors) ====
    0B0110_0110__
               ~
!!! error TS6188: Numeric separators are not allowed here.
                ~
!!! error TS1005: ';' expected.
                ~
!!! error TS2304: Cannot find name '_'.
    
==== tests/cases/conformance/parser/ecmascriptnext/numericSeparators/6.ts (2 errors) ====
    0b___0111010_0101_1
      
!!! error TS1177: Binary digit expected.
      ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name '___0111010_0101_1'.
    